[gd_scene load_steps=3 format=3 uid="uid://c45tsiyr1kdv8"]

[ext_resource type="Script" uid="uid://calei2phx5hdm" path="res://scripts/MainMenu.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://ccflwkn3yh8ia" path="res://assets/MainMenu.png" id="1_yqorp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = -6.0
offset_right = 1153.0
offset_bottom = 648.0
texture = ExtResource("1_yqorp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="RulesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Game Rules"

[node name="RulesPopup" type="PopupPanel" parent="."]
position = Vector2i(1196, 285)
size = Vector2i(365, 182)
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="RulesPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="RulesPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game Rules"
horizontal_alignment = 1

[node name="RulesText" type="Label" parent="RulesPopup/VBoxContainer"]
layout_mode = 2
text = "1. Merge creatures to create new ones
2. Match similar creatures to combine them
3. Try to create the rarest creatures!
4. Don't let the board fill up!"

[node name="CloseButton" type="Button" parent="RulesPopup/VBoxContainer"]
layout_mode = 2
text = "Close"
